[package]
name = "balance-tui"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CLI/TUI chemical equation balancer"
keywords = ["chemistry", "cli", "tui"]
homepage = "https://github.com/beaconbrigade/balance-tui"
repository = "https://github.com/beaconbrigade/balance-tui.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "cmbl"

[dependencies]
arboard = { version = "3.2.0", default-features = false }
bpaf = { version = "0.7.4", features = ["derive"] }
chem-eq = "0.1.1"
color-eyre = "0.6.2"
crossterm = "0.25.0"
tui = "0.19.0"
